--- a/css/global.css
+++ b/css/global.css
@@ -172,8 +172,6 @@ em {
   font-style: italic;
 }
 ul, ol {
-  list-style: none;
-  margin: 15px 0;
   padding-top: 5px;
 }
 ul ul,
@@ -192,13 +190,6 @@ ol {
 }
 ol li {
   margin-left: 20px;
-}
-ul li {
-  padding-left: 8px;
-  background: url(images/icons/tick_4x4_drk.png) no-repeat 0 9px;
-}
-ul li li {
-  margin-left: 4px;
 }
 dl {
   margin: 15px 0;
@@ -221,13 +212,13 @@ hr {
   padding: 0;
   background-color: #b5aaa9;
 }
+/* @group abstract classes */
 .hidden {
   display: none;
 }
 .crop {
   overflow: hidden;
 }
-/* @group Wordpress */
 .aligncenter {
   display: block;
   margin-left: auto;
@@ -255,6 +246,9 @@ hr {
 /* @end */
 .pagination {
   background-color: rgba(255, 0, 255, 0.5);
+}
+#content {
+  margin: 10px 0 30px 0;
 }
 .post header {
   margin-bottom: 10px;
@@ -290,9 +284,6 @@ hr {
   font-size: 80px;
   padding-top: 0;
   line-height: 60px;
-}
-#content {
-  margin: 10px 0 30px 0;
 }
 ::selection {
   background: #5d504f none repeat;
