--- a/less/srd.less
+++ b/less/srd.less
@@ -29,106 +29,148 @@
 			text-indent: -9999px;
 		}
 	}
-}
-
-nav .menu .page-item-2 a:before {
-	color:#c00 !important;
-}
-
-#follow_list {
-	background:rgba(255,30,0,.8);
-	position:absolute;
-	z-index:999999;
-	right:0;
-	height:0;
-	top:@row-height;
-	overflow:hidden;
-	a {
-	
-	}
-}
-#follow_list.expanded {
-	height:150px;
-}
-
-#work_pullout {
-	height:0;
-	width: 960px !important;
-	position: absolute;
-	display: block;
-	background: rgba(93,80,79,.95);
-	top: 15px;
-	left: -20px;
-	padding: 20px;
-	padding-top: 20px;
-	padding-bottom: 17px;
-	display:none;
-	color: #fefafa;
-	overflow:hidden;
-	z-index:999999;
-	a {
-		width: auto;
-		padding: 0;
-		display: inline;
-		font-size: inherit;
-		font-weight: inherit;
-		text-decoration: underline;
-	}
-	a:hover {
-		background: none;
-	}
-	h4 {
-		padding-left: 3px;
-		font-size: 15px;
-	}
-	li {
-		padding: 0;
-		margin-left: 0;
-		float:left;
-	}
-	li.intro {
-		h4 {
-			padding-left: 24px;
-		}
-		.more {
-			display: block;
-			font-weight: bold;
-			font-size: 11px;
-			padding-top: 1px;
-		}
-	}
-	li.showcase {
-		a {
-			text-decoration:none;
-		}
-		h4 {
-			font-size: 13px;
-			background: rgba(93,80,79,.85);
-			position: absolute;
-			bottom:6px;
-			left: 3px;
-			width: 187px;
-			margin: 0;
-		}
-		img {
-			padding: 3px;
-			margin: -3px 0 -3px 0;
-		}
-	}
-}
-
-#work_pullout.expanded {
-	height:300px;
-}
-
-nav {
-	.menu ul {
-		li {
-			margin-right:20px !important;
+	nav {	
+		#follow_list {
+			background:rgba(255,30,0,.8);
+			position:absolute;
+			z-index:999999;
+			right:0;
+			height:0;
+			top:@row-height;
+			overflow:hidden;
 			a {
-				width: 46px;
-				padding-left: 4px;
+
 			}
 		}
-	}	
+		#follow_list.expanded {
+			height:150px;
+		}
+
+		#work_pullout {
+			height:0;
+			width: 960px !important;
+			position: absolute;
+			display: block;
+			background: rgba(93,80,79,.95);
+			top: 15px;
+			left: -20px;
+			padding: 20px;
+			padding-top: 20px;
+			padding-bottom: 17px;
+			display:none;
+			color: #fefafa;
+			overflow:hidden;
+			z-index:999999;
+			a {
+				width: auto;
+				padding: 0;
+				display: inline;
+				font-size: inherit;
+				font-weight: inherit;
+				text-decoration: underline;
+			}
+			a:hover {
+				background: none;
+			}
+			h4 {
+				padding-left: 3px;
+				font-size: 15px;
+			}
+			li {
+				padding: 0;
+				margin-left: 0;
+				float:left;
+			}
+			li.intro {
+				h4 {
+					padding-left: 24px;
+				}
+				.more {
+					display: block;
+					font-weight: bold;
+					font-size: 11px;
+					padding-top: 1px;
+				}
+			}
+			li.showcase {
+				a {
+					text-decoration:none;
+				}
+				h4 {
+					font-size: 13px;
+					background: rgba(93,80,79,.85);
+					position: absolute;
+					bottom:6px;
+					left: 3px;
+					width: 187px;
+					margin: 0;
+				}
+				img {
+					padding: 3px;
+					margin: -3px 0 -3px 0;
+				}
+			}
+		}
+
+		#work_pullout.expanded {
+			height:300px;
+		}
+
+		nav {
+			.menu ul {
+				li {
+					margin-right:20px !important;
+					a {
+						width: 46px;
+						padding-left: 4px;
+					}
+				}
+			}	
+		}
+	}
+}
+
+#page_footer {
+	#cat_navigation {
+		text-indent: 0;
+		a.head {
+			display: block;
+			font-weight: bold;
+			margin: 0px;
+			padding: 0px;
+			text-indent: 14px;
+			text-decoration: none;
+		}
+		li {
+			font-weight: bold;
+			font-size: 12px;
+			list-style: none outside none;
+			display: block !important;
+			background: none;
+			padding-left: 0;
+			a {
+				outline-style: none;
+				display: block;
+			}
+		}
+		li:first-child {
+			padding-top: 0;
+		}
+		ul {
+			margin-top: 0;
+			padding-top: 0;
+		}
+		li li {
+			font-weight: normal;
+			font-size: 11px;
+			padding-top: 0;
+			a {
+				display: block;
+				padding-left: 5px;
+			}
+		}
+		li li:first-child {
+			margin: 0;
+		}
+	}
 }
