--- a/less/forms.less
+++ b/less/forms.less
@@ -1,28 +1,4 @@
-@color_accent: 		#ff1e00;
-@color_highlight: 	#fefafa;
-@color_light: 		#f0eceb;
-@color_midtone: 	#5d504f;
-@color_dark: 		#3d302f;
-@color_off_black: 	#050000;
-
-@row-height:		15px;
-
-.reset-dimensions {
-	margin:0;
-	padding:0;
-}
-
-.show-bounds {
-	background-color: rgba(255, 255, 0, .5);
-}
-
-.opacity(@level:1) {
-	opacity:@level;
-}
-
-.incomplete {
-	background-color: rgba(255,0,255,.5);
-}
+@import "variables";
 
 input[type=text], textarea {
 	font-size: 12px;
