--- a/less/grid.less
+++ b/less/grid.less
@@ -1,6 +1,4 @@
-@row-height:		15px;
-@column-width:		50px;
-@gutter-width:		20px;
+@import "variables";
 
 .wrapper { 
 	width: (@column-width*14) + (@gutter-width*13); 
