--- a/less/ie.less
+++ b/less/ie.less
@@ -1,32 +1,4 @@
-@color_accent: 		#ff1e00;
-@color_highlight: 	#fefafa;
-@color_light: 		#f0eceb;
-@color_midtone: 	#5d504f;
-@color_dark: 		#3d302f;
-@color_off_black: 	#050000;
-
-
-@sans:'Helvetica Neue',Helvetica,Arial,sans-serif;
-@serif:serif;
-
-@row-height:		15px;
-
-.reset-dimensions {
-	margin:0;
-	padding:0;
-}
-
-.incomplete {
-	background-color: rgba(255,0,255,.5);
-}
-
-.show-bounds {
-	background-color: rgba(255, 255, 0, .5);
-}
-
-.opacity(@level:1) {
-	opacity:@level;
-}
+@import "variables";
 
 #page_footer {
 	.item-0, .item-4 {
