--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
 }
+.incomplete {
+  background-color: rgba(255, 0, 255, 0);
+}
 .show-bounds {
   background-color: rgba(255, 255, 0, 0.5);
 }
