--- a/less/index.less
+++ b/less/index.less
@@ -1,26 +1,4 @@
-@color_accent: 		#ff1e00;
-@color_highlight: 	#fefafa;
-@color_light: 		#f0eceb;
-@color_midtone: 	#5d504f;
-@color_dark: 		#3d302f;
-@color_off_black: 	#050000;
-
-@row-height:		15px;
-@column-width:		50px;
-@gutter-width:		20px;
-
-.reset-dimensions {
-	margin:0;
-	padding:0;
-}
-
-.show-bounds {
-	background-color: rgba(255, 255, 0, .5);
-}
-
-.opacity(@level:1) {
-	opacity:@level;
-}
+@import "variables";
 
 #content.home {
 	.metadata {
