--- a/less/transitions.less
+++ b/less/transitions.less
@@ -4,7 +4,7 @@
 	-o-transition: all .3s cubic-bezier(0.02, 0, 0.18, 1.0); 
 }
 
-#content.post #content_secondary {
+#sidebar {
 	-webkit-transition-property: width, border-left, opacity;
 	-webkit-transition-duration: .5s;
 	-webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1.0);
