--- a/css/footer.css
+++ b/css/footer.css
@@ -1,56 +1,12 @@
-.reset-dimensions {
-  margin: 0;
-  padding: 0;
-}
-.incomplete {
-  background-color: rgba(255, 0, 255, 0);
-}
-.show-bounds {
-  background-color: rgba(255, 255, 0, 0.5);
-}
-#page_footer {
-  padding-top: 30px;
-  padding-bottom: 60px;
-  color: #f0eceb;
-}
-#page_footer a {
-  color: #fefafa;
-}
-#page_footer h3 {
-  color: #f0eceb;
-}
-#page_footer .recent_comments dd {
-  font-size: 11px;
-}
-#page_footer .widget {
-  float: left;
-  margin-right: 20px;
-  width: 190px;
-  margin-bottom: 20px;
-}
-#page_footer .widget:nth-child(4n+1) {
-  width: 330px;
-  clear: left;
-}
-#page_footer .widget:nth-child(4n) {
-  margin-right: 0;
-}
-#page_heel {
-  padding: 15px 0;
-  color: #fefafa;
-  padding-bottom: 30px;
-}
-/* @group Sticky Footer */
-#sticky_footer {
-  width: 100%;
-  background-color: rgba(42, 32, 30, 0.75);
-  position: fixed;
-  overflow: hidden;
-  height: 30px;
-  bottom: 0;
-  z-index: 99999;
-}
-#sticky_footer.light {
-  background-color: rgba(254, 250, 250, 0.75);
-}
-/* @end */
+.reset-dimensions{margin:0;padding:0;}
+.incomplete{background-color:rgba(255, 0, 255, 0);}
+.show-bounds{background-color:rgba(255, 255, 0, 0.5);}
+#page_footer{padding-top:30px;padding-bottom:60px;color:#f0eceb;}#page_footer a{color:#fefafa;}
+#page_footer h3{color:#f0eceb;}
+#page_footer .recent_comments dd{font-size:11px;}
+#page_footer .widget{float:left;margin-right:20px;width:190px;margin-bottom:20px;}
+#page_footer .widget:nth-child(4n+1){width:330px;clear:left;}
+#page_footer .widget:nth-child(4n){margin-right:0;}
+#page_heel{padding:15px 0;color:#fefafa;padding-bottom:30px;}
+#sticky_footer{width:100%;background-color:rgba(42, 32, 30, 0.75);position:fixed;overflow:hidden;height:30px;bottom:0;z-index:99999;}
+#sticky_footer.light{background-color:rgba(254, 250, 250, 0.75);}
