--- a/css/global.css
+++ b/css/global.css
@@ -1,301 +1,62 @@
--webkit-font-smoothing: antialiased;.reset-dimensions {
-  margin: 0;
-  padding: 0;
-}
-.incomplete {
-  background-color: rgba(255, 0, 255, 0);
-}
-.show-bounds {
-  background-color: rgba(255, 255, 0, 0.5);
-}
-img {
-  -ms-interpolation-mode: bicubic;
-}
-p img:first-child {
-  margin-top: -5px;
-  margin-bottom: 5px;
-}
-table {
-  border-collapse: separate;
-  border-spacing: 0;
-  font-size: 12px;
-  margin: 20px 0;
-}
-table, td, th {
-  vertical-align: middle;
-}
-th, td {
-  text-align: left;
-  font-weight: normal;
-  padding: 0 5px;
-}
-th {
-  border-bottom: 1px solid;
-  font-weight: bold;
-}
-/* @end */
-body {
-  font-size: 62.5%;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  background-color: #fefafa;
-  color: #050000;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  line-height: 15px;
-}
-#page_bottom {
-  background: #5d504f;
-}
-#page_heel {
-  background: #050000;
-}
-a {
-  color: #5d504f;
-  text-decoration: underline;
-}
-a img {
-  border: none;
-}
-a.external {
-  text-decoration: none;
-  border-bottom: 1px dotted #5d504f;
-}
-a:hover {
-  color: #7f7271;
-}
-a.external:hover {
-  text-decoration: none;
-  border-bottom: 1px dotted #7f7271;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 10px 0 15px 0;
-  line-height: 30px;
-}
-h1:first-child,
-h2:first-child,
-h3:first-child,
-h4:first-child,
-h5:first-child,
-h6:first-child {
-  margin-top: 0;
-}
-h1 {
-  font-size: 24px;
-  padding-top: 6px;
-  margin-bottom: 15px;
-}
-h2 {
-  font-size: 21px;
-  padding-top: 0px;
-  margin-bottom: 15px;
-}
-h3 {
-  font-size: 18px;
-  padding-top: 0px;
-  margin-bottom: 15px;
-}
-h4 {
-  font-size: 16px;
-  padding-top: 0px;
-  margin-bottom: 15px;
-}
-h5 {
-  font-size: 14px;
-  padding-top: 0px;
-  margin-bottom: 15px;
-}
-h6 {
-  font-size: 12px;
-  padding-top: 0px;
-  margin: 15px 0;
-}
-blockquote {
-  margin: 15px 0px;
-  padding: 0;
-  font-size: 17px;
-  line-height: 30px;
-  color: #5d504f;
-}
-blockquote blockquote {
-  margin-top: 0;
-}
-blockquote p {
-  font-size: 17px !important;
-  line-height: 30px !important;
-}
-blockquote cite {
-  font-size: 12px;
-}
-blockquote cite:before {
-  content: "— ";
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
-}
-blockquote, q {
-  quotes: "" "";
-}
-blockquote:first-child, blockquote p:first-child {
-  margin-top: 0;
-}
-blockquote:last-child, blockquote p:last-child {
-  margin-bottom: 0;
-}
-p {
-  margin: 15px 0;
-  padding-top: 3px;
-  margin-bottom: 12px;
-  padding-bottom: 2px;
-  font-size: 12px;
-  line-height: 15px;
-}
-p:first-child {
-  margin-top: 0;
-}
-p:last-child {
-  margin-bottom: 0;
-}
-pre, code, tt {
-  font: 10px 'andale mono', 'monotype.com', 'lucida console', monospace;
-  line-height: 15px;
-}
-em {
-  font-style: italic;
-}
-ul, ol {
-  padding-top: 5px;
-}
-ul ul,
-ol ul,
-ul ol,
-ol ol {
-  margin: 0;
-  padding-top: 0;
-}
-ul li, ol li {
-  margin: 0;
-  font-size: 12px;
-}
-ol {
-  list-style: decimal;
-}
-ol li {
-  margin-left: 20px;
-}
-dl {
-  margin: 15px 0;
-  padding-top: 5px;
-}
-dl dt, dl dd {
-  font-size: 12px;
-}
-dl dt {
-  font-weight: bold;
-  margin-top: 15px;
-}
-dl dt:first-child {
-  margin: 0;
-}
-hr {
-  height: 1px;
-  border: 0;
-  margin: 15px 0;
-  padding: 0;
-  background-color: #b5aaa9;
-}
-/* @group abstract classes */
-.hidden {
-  display: none;
-}
-.crop {
-  overflow: hidden;
-}
-.aligncenter {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.alignleft {
-  float: left !important;
-}
-.alignright {
-  float: right !important;
-}
-.wp-caption {
-  text-align: center;
-}
-.wp-caption img {
-  margin: 0;
-  padding: 0;
-  border: 0 none;
-}
-.wp-caption p.wp-caption-text {
-  font-size: 11px;
-  padding: 5px 4px 0 0;
-  margin: 15px;
-}
-/* @end */
-.pagination {
-  background-color: rgba(255, 0, 255, 0);
-}
-#content {
-  margin: 10px 0 30px 0;
-}
-.post header {
-  margin-bottom: 10px;
-}
-.post header h1 a, .post header h2 a, .post header h3 a {
-  text-decoration: none;
-}
-.post .callout {
-  background-color: rgba(255, 0, 255, 0);
-}
-.post p .callout {
-  padding-top: 0;
-}
-.post ul.metadata {
-  margin: 0;
-  padding: 0;
-  padding-top: 5px;
-  list-style: none;
-}
-.post ul.metadata li {
-  margin: 0;
-  padding: 0;
-  float: left;
-  background: none;
-  margin-right: 20px;
-}
-.post ul.metadata li.last {
-  margin-right: 0;
-}
-#foutohfour_title {
-  margin-top: 0;
-  margin-bottom: 20px;
-  font-size: 80px;
-  padding-top: 0;
-  line-height: 60px;
-}
-::selection {
-  background: #5d504f none repeat;
-  color: #fefafa;
-  /* Safari and Opera */
-}
-::-moz-selection {
-  background: #5d504f none;
-  color: #fefafa;
-  /* Firefox */
-}
-.time.iconic time, .comments.iconic a {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  padding-left: 5px;
-}
+-webkit-font-smoothing:antialiased;.reset-dimensions{margin:0;padding:0;}
+.incomplete{background-color:rgba(255, 0, 255, 0);}
+.show-bounds{background-color:rgba(255, 255, 0, 0.5);}
+img{-ms-interpolation-mode:bicubic;}
+p img:first-child{margin-top:-5px;margin-bottom:5px;}
+table{border-collapse:separate;border-spacing:0;font-size:12px;margin:20px 0;}
+table,td,th{vertical-align:middle;}
+th,td{text-align:left;font-weight:normal;padding:0 5px;}
+th{border-bottom:1px solid;font-weight:bold;}
+body{font-size:62.5%;font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;background-color:#fefafa;color:#050000;height:100%;margin:0;padding:0;line-height:15px;}
+#page_bottom{background:#5d504f;}
+#page_heel{background:#050000;}
+a{color:#5d504f;text-decoration:underline;}a img{border:none;}
+a.external{text-decoration:none;border-bottom:1px dotted #5d504f;}
+a:hover{color:#7f7271;}
+a.external:hover{text-decoration:none;border-bottom:1px dotted #7f7271;}
+h1,h2,h3,h4,h5,h6{margin:10px 0 15px 0;line-height:30px;}
+h1:first-child,h2:first-child,h3:first-child,h4:first-child,h5:first-child,h6:first-child{margin-top:0;}
+h1{font-size:24px;padding-top:6px;margin-bottom:15px;}
+h2{font-size:21px;padding-top:0px;margin-bottom:15px;}
+h3{font-size:18px;padding-top:0px;margin-bottom:15px;}
+h4{font-size:16px;padding-top:0px;margin-bottom:15px;}
+h5{font-size:14px;padding-top:0px;margin-bottom:15px;}
+h6{font-size:12px;padding-top:0px;margin:15px 0;}
+blockquote{margin:15px 0px;padding:0;font-size:17px;line-height:30px;color:#5d504f;}blockquote blockquote{margin-top:0;}
+blockquote p{font-size:17px !important;line-height:30px !important;}
+blockquote cite{font-size:12px;}
+blockquote cite:before{content:"— ";}
+blockquote:before,blockquote:after,q:before,q:after{content:"";}
+blockquote,q{quotes:"" "";}
+blockquote:first-child,blockquote p:first-child{margin-top:0;}
+blockquote:last-child,blockquote p:last-child{margin-bottom:0;}
+p{margin:15px 0;padding-top:3px;margin-bottom:12px;padding-bottom:2px;font-size:12px;line-height:15px;}
+p:first-child{margin-top:0;}
+p:last-child{margin-bottom:0;}
+pre,code,tt{font:10px 'andale mono','monotype.com','lucida console',monospace;line-height:15px;}
+em{font-style:italic;}
+ul,ol{padding-top:5px;}ul ul,ol ul,ul ol,ol ol{margin:0;padding-top:0;}
+ul li,ol li{margin:0;font-size:12px;}
+ol{list-style:decimal;}ol li{margin-left:20px;}
+dl{margin:15px 0;padding-top:5px;}dl dt,dl dd{font-size:12px;}
+dl dt{font-weight:bold;margin-top:15px;}
+dl dt:first-child{margin:0;}
+hr{height:1px;border:0;margin:15px 0;padding:0;background-color:#b5aaa9;}
+.hidden{display:none;}
+.crop{overflow:hidden;}
+.aligncenter{display:block;margin-left:auto;margin-right:auto;}
+.alignleft{float:left !important;}
+.alignright{float:right !important;}
+.wp-caption{text-align:center;}.wp-caption img{margin:0;padding:0;border:0 none;}
+.wp-caption p.wp-caption-text{font-size:11px;padding:5px 4px 0 0;margin:15px;}
+.pagination{background-color:rgba(255, 0, 255, 0);}
+#content{margin:10px 0 30px 0;}
+.post header{margin-bottom:10px;}.post header h1 a,.post header h2 a,.post header h3 a{text-decoration:none;}
+.post .callout{background-color:rgba(255, 0, 255, 0);}
+.post p .callout{padding-top:0;}
+.post ul.metadata{margin:0;padding:0;padding-top:5px;list-style:none;}.post ul.metadata li{margin:0;padding:0;float:left;background:none;margin-right:20px;}
+.post ul.metadata li.last{margin-right:0;}
+#foutohfour_title{margin-top:0;margin-bottom:20px;font-size:80px;padding-top:0;line-height:60px;}
+::selection{background:#5d504f none repeat;color:#fefafa;}
+::-moz-selection{background:#5d504f none;color:#fefafa;}
+.time.iconic time,.comments.iconic a{font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;padding-left:5px;}
