--- a/css/srd.css
+++ b/css/srd.css
@@ -1,138 +1,23 @@
-.reset-dimensions {
-  margin: 0;
-  padding: 0;
-}
-.incomplete {
-  background-color: rgba(255, 0, 255, 0);
-}
-.show-bounds {
-  background-color: rgba(255, 255, 0, 0.5);
-}
-#page_header h1 a {
-  text-indent: -9999px;
-}
-#page_header nav #follow_list {
-  background: rgba(255, 30, 0, 0.8);
-  position: absolute;
-  z-index: 999999;
-  right: 0;
-  height: 0;
-  top: 15px;
-  overflow: hidden;
-}
-#page_header nav #follow_list.expanded {
-  height: 150px;
-}
-#page_header nav #work_pullout {
-  height: 0;
-  width: 960px !important;
-  position: absolute;
-  display: block;
-  background: rgba(93, 80, 79, 0.95);
-  top: 15px;
-  left: -20px;
-  padding: 20px;
-  padding-top: 20px;
-  padding-bottom: 17px;
-  display: none;
-  color: #fefafa;
-  overflow: hidden;
-  z-index: 999999;
-}
-#page_header nav #work_pullout a {
-  width: auto;
-  padding: 0;
-  display: inline;
-  font-size: inherit;
-  font-weight: inherit;
-  text-decoration: underline;
-}
-#page_header nav #work_pullout a:hover {
-  background: none;
-}
-#page_header nav #work_pullout h4 {
-  padding-left: 3px;
-  font-size: 15px;
-}
-#page_header nav #work_pullout li {
-  padding: 0;
-  margin-left: 0;
-  float: left;
-}
-#page_header nav #work_pullout li.intro h4 {
-  padding-left: 24px;
-}
-#page_header nav #work_pullout li.intro .more {
-  display: block;
-  font-weight: bold;
-  font-size: 11px;
-  padding-top: 1px;
-}
-#page_header nav #work_pullout li.showcase a {
-  text-decoration: none;
-}
-#page_header nav #work_pullout li.showcase h4 {
-  font-size: 13px;
-  background: rgba(93, 80, 79, 0.85);
-  position: absolute;
-  bottom: 6px;
-  left: 3px;
-  width: 187px;
-  margin: 0;
-}
-#page_header nav #work_pullout li.showcase img {
-  padding: 3px;
-  margin: -3px 0 -3px 0;
-}
-#page_header nav #work_pullout.expanded {
-  height: 300px;
-}
-#page_header nav nav .menu ul li {
-  margin-right: 20px !important;
-}
-#page_header nav nav .menu ul li a {
-  width: 46px;
-  padding-left: 4px;
-}
-#page_footer #cat_navigation {
-  text-indent: 0;
-}
-#page_footer #cat_navigation a.head {
-  display: block;
-  font-weight: bold;
-  margin: 0px;
-  padding: 0px;
-  text-indent: 14px;
-  text-decoration: none;
-}
-#page_footer #cat_navigation li {
-  font-weight: bold;
-  font-size: 12px;
-  list-style: none outside none;
-  display: block !important;
-  background: none;
-  padding-left: 0;
-}
-#page_footer #cat_navigation li a {
-  outline-style: none;
-  display: block;
-}
-#page_footer #cat_navigation li:first-child {
-  padding-top: 0;
-}
-#page_footer #cat_navigation ul {
-  margin-top: 0;
-  padding-top: 0;
-}
-#page_footer #cat_navigation li li {
-  font-weight: normal;
-  font-size: 11px;
-  padding-top: 0;
-}
-#page_footer #cat_navigation li li a {
-  display: block;
-  padding-left: 5px;
-}
-#page_footer #cat_navigation li li:first-child {
-  margin: 0;
-}
+.reset-dimensions{margin:0;padding:0;}
+.incomplete{background-color:rgba(255, 0, 255, 0);}
+.show-bounds{background-color:rgba(255, 255, 0, 0.5);}
+#page_header h1 a{text-indent:-9999px;}
+#page_header nav #follow_list{background:rgba(255, 30, 0, 0.8);position:absolute;z-index:999999;right:0;height:0;top:15px;overflow:hidden;}
+#page_header nav #follow_list.expanded{height:150px;}
+#page_header nav #work_pullout{height:0;width:960px !important;position:absolute;display:block;background:rgba(93, 80, 79, 0.95);top:15px;left:-20px;padding:20px;padding-top:20px;padding-bottom:17px;display:none;color:#fefafa;overflow:hidden;z-index:999999;}#page_header nav #work_pullout a{width:auto;padding:0;display:inline;font-size:inherit;font-weight:inherit;text-decoration:underline;}
+#page_header nav #work_pullout a:hover{background:none;}
+#page_header nav #work_pullout h4{padding-left:3px;font-size:15px;}
+#page_header nav #work_pullout li{padding:0;margin-left:0;float:left;}
+#page_header nav #work_pullout li.intro h4{padding-left:24px;}
+#page_header nav #work_pullout li.intro .more{display:block;font-weight:bold;font-size:11px;padding-top:1px;}
+#page_header nav #work_pullout li.showcase a{text-decoration:none;}
+#page_header nav #work_pullout li.showcase h4{font-size:13px;background:rgba(93, 80, 79, 0.85);position:absolute;bottom:6px;left:3px;width:187px;margin:0;}
+#page_header nav #work_pullout li.showcase img{padding:3px;margin:-3px 0 -3px 0;}
+#page_header nav #work_pullout.expanded{height:300px;}
+#page_header nav nav .menu ul li{margin-right:20px !important;}#page_header nav nav .menu ul li a{width:46px;padding-left:4px;}
+#page_footer #cat_navigation{text-indent:0;}#page_footer #cat_navigation a.head{display:block;font-weight:bold;margin:0px;padding:0px;text-indent:14px;text-decoration:none;}
+#page_footer #cat_navigation li{font-weight:bold;font-size:12px;list-style:none outside none;display:block !important;background:none;padding-left:0;}#page_footer #cat_navigation li a{outline-style:none;display:block;}
+#page_footer #cat_navigation li:first-child{padding-top:0;}
+#page_footer #cat_navigation ul{margin-top:0;padding-top:0;}
+#page_footer #cat_navigation li li{font-weight:normal;font-size:11px;padding-top:0;}#page_footer #cat_navigation li li a{display:block;padding-left:5px;}
+#page_footer #cat_navigation li li:first-child{margin:0;}
