--- a/css/transitions.css
+++ b/css/transitions.css
@@ -1,17 +1,3 @@
-#follow_list {
-  -webkit-transition: all 0.3s cubic-bezier(0.02, 0, 0.18, 1);
-  -moz-transition: all 0.3s cubic-bezier(0.02, 0, 0.18, 1);
-  -o-transition: all 0.3s cubic-bezier(0.02, 0, 0.18, 1);
-}
-#content.post #content_secondary {
-  -webkit-transition-property: width, border-left, opacity;
-  -webkit-transition-duration: .5s;
-  -webkit-transition-timing-function: cubic-bezier(0.02, 0, 0.18, 1);
-  -moz-transition: all 0.5s cubic-bezier(0.02, 0, 0.18, 1);
-  -o-transition: all 0.5s cubic-bezier(0.02, 0, 0.18, 1);
-}
-#sticky_footer {
-  -webkit-transition: all 0.5s cubic-bezier(0.02, 0, 0.18, 1);
-  -moz-transition: all 0.5s cubic-bezier(0.02, 0, 0.18, 1);
-  -o-transition: all 0.5s cubic-bezier(0.02, 0, 0.18, 1);
-}
+#follow_list{-webkit-transition:all 0.3s cubic-bezier(0.02, 0, 0.18, 1);-moz-transition:all 0.3s cubic-bezier(0.02, 0, 0.18, 1);-o-transition:all 0.3s cubic-bezier(0.02, 0, 0.18, 1);}
+#sidebar{-webkit-transition-property:width,border-left,opacity;-webkit-transition-duration:.5s;-webkit-transition-timing-function:cubic-bezier(0.02, 0, 0.18, 1);-moz-transition:all 0.5s cubic-bezier(0.02, 0, 0.18, 1);-o-transition:all 0.5s cubic-bezier(0.02, 0, 0.18, 1);}
+#sticky_footer{-webkit-transition:all 0.5s cubic-bezier(0.02, 0, 0.18, 1);-moz-transition:all 0.5s cubic-bezier(0.02, 0, 0.18, 1);-o-transition:all 0.5s cubic-bezier(0.02, 0, 0.18, 1);}
