--- a/less/footer.less
+++ b/less/footer.less
@@ -14,7 +14,7 @@
 		float:left;
 		margin-right:20px;
 		width:190px;
-		margin-bottom:20px;
+		margin-bottom:(@row-height*2);
 	}
 
 	.widget:nth-child(4n+1) {
@@ -41,7 +41,7 @@
 	background-color: rgba(42,32,30,.75);
 	position: fixed;
 	overflow: hidden;
-	height:30px;
+	height:(@row-height*2);
 	bottom: 0;
 	z-index: 99999;
 }
