--- a/less/header.less
+++ b/less/header.less
@@ -93,7 +93,7 @@
 		float:left;
 		margin-right:20px;
 		width:190px;
-		margin-bottom:20px;
+		margin-bottom:(@row-height);
 	}
 	.widget:nth-child(4n+1) {
 		width:330px;
