--- a/less/comments.less
+++ b/less/comments.less
@@ -12,6 +12,12 @@
 		margin-top:0;
 		font-style:italic;
 	}
+	
+	#comments_ajax	{
+		overflow:hidden;
+		height:0;
+	}
+	
 	#comments {
 		.reset-dimensions;
 		margin-bottom:(@row-height);
