--- a/less/transitions.less
+++ b/less/transitions.less
@@ -18,3 +18,7 @@
 	-moz-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 	-o-transition: all .5s cubic-bezier(0.02, 0, 0.18, 1.0); 
 }
+
+#comments_ajax {
+	-webkit-transition: all 1s cubic-bezier(0.02, 0, 0.18, 1.0); 
+}
