--- a/css/global.css
+++ b/css/global.css
@@ -50,7 +50,7 @@ hr{height:1px;border:0;margin:15px 0;padding:0;background-color:#b5aaa9;}
 .wp-caption{text-align:center;}.wp-caption img{margin:0;padding:0;border:0 none;}
 .wp-caption p.wp-caption-text{font-size:11px;padding:5px 4px 0 0;margin:15px;}
 .pagination{background-color:rgba(255, 0, 255, 0);}
-#content{margin:10px 0 30px 0;}
+#content{margin:10px 0 30px 0;position:relative;}
 .post header{margin-bottom:10px;}.post header h1 a,.post header h2 a,.post header h3 a{text-decoration:none;}
 .post .callout{background-color:rgba(255, 0, 255, 0);}
 .post p .callout{padding-top:0;}
