--- a/less/global.less
+++ b/less/global.less
@@ -169,7 +169,7 @@ hr {
 	.incomplete;
 }
 
-#content { margin: (@row-height)-5 0 (@row-height*2) 0;	 }
+#content { margin: (@row-height)-5 0 (@row-height*2) 0;	position:relative; }
 
 .post {
 	header {
